<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/linear_top"
        android:paddingBottom="@dimen/linear_botton"
        android:paddingRight="@dimen/linear_right"
        android:paddingLeft="@dimen/linear_left"
        >


        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/tamaño_letra"
            android:inputType="textPersonName"
            android:hint="@string/et_nombre" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_fecha"
            android:layout_width="@dimen/anchoCard"
            android:layout_height="@dimen/altoCard"
            card_view:cardCornerRadius="@dimen/cornerRadius"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/espacioCard_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_setDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_setDate"
                    android:layout_marginTop="@dimen/espacio_top_card"
                    android:textSize="@dimen/tamaño_letra_card_dos"/>
                <TextView
                    android:id="@+id/tv_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_fecha"
                    android:layout_marginTop="@dimen/espacio_top_card"
                    android:layout_marginLeft="25dp"
                    android:textSize="@dimen/tamaño_letra_card_dos"/>

              </LinearLayout>

                <TextView
                    android:id="@+id/tv_fecha_nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_fecha_nacimiento"
                    android:layout_marginTop="@dimen/fecha_card_top"
                    android:textSize="@dimen/tamano_fecha_letra"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_cancel"
                        android:onClick="limpiar"
                        android:textSize="@dimen/tamaño_letra_card"
                        android:theme="@style/MiBotonRaised"/>
                    <Button
                        android:id="@+id/btn_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_ok"
                        android:textSize="@dimen/tamaño_letra_card"
                        android:onClick="fecha"
                        android:theme="@style/MiBotonRaised"/>



                </LinearLayout>





            </LinearLayout>

        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/tamaño_letra"
            android:inputType="phone"
            android:hint="@string/et_telefono"
            android:layout_marginTop="@dimen/espacio_top"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/et_email"
            android:textSize="@dimen/tamaño_letra"
            android:layout_marginTop="@dimen/espacio_top"/>

        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_descripcion"
            android:layout_marginTop="@dimen/espacio_top"
            android:textSize="@dimen/tamaño_letra"/>

        <EditText
            android:id="@+id/et_descripcionDos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="@dimen/tamaño_letra"/>

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_siguiente"
            android:layout_marginTop="@dimen/espacio_top"
            android:textSize="@dimen/tamaño_letra"
            android:onClick="enviar"
            android:theme="@style/MiBotonRaised"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>